// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectTableRow should render application link 1`] = `
<body>
  <div>
    <div
      class="flex items-center gap-3 border-b py-3 px-4 last:border-0 hover:bg-slate-100/50 dark:border-gray-800 dark:hover:bg-gray-800/30"
    >
      <svg
        class="stroke-gray-400"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
        />
      </svg>
      <a
        class="border-b cursor-pointer border-gray-900 leading-tight tracking-wide hover:border-sky-500 hover:text-sky-500 dark:border-gray-200 dark:text-gray-200 dark:hover:border-sky-300 dark:hover:text-sky-300"
        href="url-link"
      >
        index.html
      </a>
    </div>
  </div>
</body>
`;

exports[`ProjectTableRow should render file link 1`] = `
<body>
  <div>
    <div
      class="flex items-center gap-3 border-b py-3 px-4 last:border-0 hover:bg-slate-100/50 dark:border-gray-800 dark:hover:bg-gray-800/30"
    >
      <svg
        class="stroke-gray-400"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"
        />
        <polyline
          points="13 2 13 9 20 9"
        />
      </svg>
      <a
        class="border-b cursor-pointer border-gray-900 leading-tight tracking-wide hover:border-sky-500 hover:text-sky-500 dark:border-gray-200 dark:text-gray-200 dark:hover:border-sky-300 dark:hover:text-sky-300"
        href="#readme"
      >
        README.md
      </a>
    </div>
  </div>
</body>
`;

exports[`ProjectTableRow should render image link 1`] = `
<body>
  <div>
    <div
      class="flex items-center gap-3 border-b py-3 px-4 last:border-0 hover:bg-slate-100/50 dark:border-gray-800 dark:hover:bg-gray-800/30"
    >
      <svg
        class="stroke-gray-400"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="3"
        />
        <circle
          cx="8.5"
          cy="8.5"
          r="1.5"
        />
        <polyline
          points="21 15 16 10 5 21"
        />
      </svg>
      <a
        class="border-b cursor-pointer border-gray-900 leading-tight tracking-wide hover:border-sky-500 hover:text-sky-500 dark:border-gray-200 dark:text-gray-200 dark:hover:border-sky-300 dark:hover:text-sky-300"
        href="image-url"
      >
        mockup-01.png
      </a>
    </div>
  </div>
</body>
`;
